tests/baselines/reference/jsFileCompilationEnumSyntax.errors.txt
error TS5055: Cannot write file 'a.js' because it would overwrite input file.
  Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
a.js(1,6): error TS8006: 'enum' declarations can only be used in TypeScript files.


!!! error TS5055: Cannot write file 'a.js' because it would overwrite input file.
!!! error TS5055:   Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
==== a.js (1 errors) ====
    enum E { }
         ~
!!! error TS8006: 'enum' declarations can only be used in TypeScript files.